tests/negative/gold/import1-test.gold
tests/negative/import1-test.toit:5:24: error: Name clash with toplevel declaration 'foo'
import .import1-a show foo
                       ^~~
tests/negative/import1-test.toit:7:1: note: Toplevel declaration of 'foo'
foo:
^~~
Compilation failed
